add: usecases & tests
