# src/application/controllers/controller.js
@@ -1,6 +1,7 @@
 import { ExternalAPIError, NotFoundError } from "../../helpers/errors.js";
 import BairroService from "../services/BairroService.js";
 import IntegrationService from "../services/IntegrationService.js";
+import { distanciaEntrePontosUseCase } from "../usecases/distanciaEntrePontosUseCase.js";
 
 const bairroService = new BairroService;
 const integrationService = new IntegrationService;
@@ -19,7 +20,7 @@ export default class Controller {
 
     async getInfobyCEP(cep){
         try {
-            const result = bairroService.getBairroByCEP(cep)
+            const result = await bairroService.getBairroByCEP(cep)
 
             return result;
         } catch (error) {
@@ -33,6 +34,17 @@ export default class Controller {
             const result = await integrationService.getlatLongByNumeroECEP(numero, cep)
 
             return result;
+        } catch (error) {
+            throw new ExternalAPIError(error.message, error.statusCode)
+        }
+
+    }
+
+    async getDistancia(origem, destino){
+        try {
+            const usecase = new distanciaEntrePontosUseCase();
+
+            return await usecase.execute(origem, destino);
         } catch (error) {
             throw new ExternalAPIError(error.message, error.statusCode)
         }
